--- a/iTEMS/Views/TaskTrackers/Edit.cshtml
+++ b/iTEMS/Views/TaskTrackers/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" asp-controller="TaskTrackers" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -73,6 +73,12 @@
                 <input asp-for="Attachments" class="form-control" />
                 <span asp-validation-for="Attachments" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="FilePaths" class="control-label">Upload New Files</label>
+                <input type="file" name="files" multiple class="form-control-file" />
+                <span asp-validation-for="FilePaths" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Comments" class="control-label"></label>
                 <input asp-for="Comments" class="form-control" />
