--- a/iTEMS/Views/Employees/Create.cshtml
+++ b/iTEMS/Views/Employees/Create.cshtml
@@ -2,12 +2,14 @@
 
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create New Employee";
 }
 
-<h1>Create</h1>
-
-<h4>Employee</h4>
+<br />
+<br />
+<br />
+<br />
+<h4>Create New Employee</h4>
 <hr />
 <div class="row">
     <form asp-action="Create" class="col-md-12">
@@ -94,15 +96,11 @@
             </div>
         </div>
         <div class="form-group">
-            <input type="submit" value="Create New Employee" class="btn btn-primary" />
+            <a class="btn btn-danger" asp-action="Index" title="Back to List" onmouseover="this.style.backgroundColor='#610707';" onmouseout="this.style.backgroundColor='';"><i class="fa-solid fa-arrow-left-long"></i></a>
+            <input type="submit" value="Create New Employee" class="btn btn-primary" onmouseover="this.style.backgroundColor='#024a73';" onmouseout="this.style.backgroundColor='';" />
         </div>
     </form>
 </div>
-
-<div>
-    <a class="btn btn-danger" asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
