--- a/iTEMS/Views/Employees/Details.cshtml
+++ b/iTEMS/Views/Employees/Details.cshtml
@@ -2,109 +2,78 @@
 @{
     ViewData["Title"] = "Details";
 }
-
-<h1>Details</h1>
+<br />
+<br />
+<br />
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12">
         <h4>Employee Details</h4>
         <hr />
-        <dl class="row">
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.EmpNo)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.EmpNo)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.FirstName)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.FirstName)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.LastName)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.LastName)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.PhoneNumber)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.PhoneNumber)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Email)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Email)
-            </dd>
-        </dl>
-    </div>
-    <div class="col-md-6">
-        <h4>Additional Details</h4>
-        <hr />
-        <dl class="row">
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Country)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Country)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.DateofBirth)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.DateofBirth)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Address)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Address)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Department)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Department)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Designation)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Designation)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.CreatedBy)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.CreatedBy)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.CreatedOn)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.CreatedOn)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.ModifiedBy)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.ModifiedBy)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.ModifiedOn)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.ModifiedOn)
-            </dd>
-        </dl>
+        <table class="table table-bordered">
+            <tbody>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.EmpNo)</th>
+                    <td>@Html.DisplayFor(model => model.EmpNo)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.FirstName)</th>
+                    <td>@Html.DisplayFor(model => model.FirstName)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.LastName)</th>
+                    <td>@Html.DisplayFor(model => model.LastName)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.PhoneNumber)</th>
+                    <td>@Html.DisplayFor(model => model.PhoneNumber)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Email)</th>
+                    <td>@Html.DisplayFor(model => model.Email)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Country)</th>
+                    <td>@Html.DisplayFor(model => model.Country)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.DateofBirth)</th>
+                    <td>@Html.DisplayFor(model => model.DateofBirth)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Address)</th>
+                    <td>@Html.DisplayFor(model => model.Address)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Department)</th>
+                    <td>@Html.DisplayFor(model => model.Department)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.Designation)</th>
+                    <td>@Html.DisplayFor(model => model.Designation)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.CreatedBy)</th>
+                    <td>@Html.DisplayFor(model => model.CreatedBy)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.CreatedOn)</th>
+                    <td>@Html.DisplayFor(model => model.CreatedOn)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.ModifiedBy)</th>
+                    <td>@Html.DisplayFor(model => model.ModifiedBy)</td>
+                </tr>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.ModifiedOn)</th>
+                    <td>@Html.DisplayFor(model => model.ModifiedOn)</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-danger" asp-action="Index" title="Back to List" onmouseover="this.style.backgroundColor='#610707';" onmouseout="this.style.backgroundColor='';"><i class="fa-solid fa-arrow-left-long"></i></a>
+    <a class="btn btn-outline-info" asp-action="Index" title="Back to List" onmouseover="this.style.backgroundColor='#007bff';" onmouseout="this.style.backgroundColor='';"><i class="fa-solid fa-arrow-left-long"></i></a>
     <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary" onmouseover="this.style.backgroundColor='#024a73';" onmouseout="this.style.backgroundColor='';">Edit</a>
 </div>
