--- a/iTEMS/Views/Employees/Edit.cshtml
+++ b/iTEMS/Views/Employees/Edit.cshtml
@@ -93,7 +93,7 @@
                 </div>
              </div>
             <div class="form-group">
-                <a class="btn btn-danger" asp-action="Index" title="Back to List" onmouseover="this.style.backgroundColor='#610707';" onmouseout="this.style.backgroundColor='';"><i class="fa-solid fa-arrow-left-long"></i></a>
+            <a class="btn btn-outline-info" asp-action="Index" title="Back to List" onmouseover="this.style.backgroundColor='#007bff';" onmouseout="this.style.backgroundColor='';"><i class="fa-solid fa-arrow-left-long"></i></a>
                 <input type="submit" value="Save" class="btn btn-primary" onmouseover="this.style.backgroundColor='#024a73';" onmouseout="this.style.backgroundColor='';" />
             </div>
         </form>
