--- a/iTEMS/Views/Employees/Index.cshtml
+++ b/iTEMS/Views/Employees/Index.cshtml
@@ -6,10 +6,10 @@
 
 <h1>Index</h1>
 
-<div class="card-header">
+<div class="card-header" >
     <h3 class="card-title">Employee List</h3>
 </div>
-        <div class="card-body">
+<div class="card-body" style="display:none">
                 <p>
                     <a class="btn btn-primary" asp-action="Create">Add New Employee</a>
                 </p>
@@ -112,3 +112,53 @@
                 </tbody>
                     </table>
         </div>
+
+
+<div class="card-body">
+    <p>
+        <a class="btn btn-primary" asp-action="Create">Add New Employee</a>
+    </p>
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch flex-column">
+                <div class="card bg-light d-flex flex-fill">
+                    <div class="card-header text-muted border-bottom-0">
+                        @Html.DisplayFor(modelItem => item.Designation)
+                    </div>
+                    <div class="card-body pt-0">
+                        <div class="row">
+                            <div class="col-7">
+                                <h2 class="lead"><b>@Html.DisplayFor(modelItem => item.FullName)</b></h2>
+                                <p class="text-muted text-sm"><b>About: </b>@Html.DisplayFor(modelItem => item.Department) / @Html.DisplayFor(modelItem => item.Designation)</p>
+                                <p class="text-muted text-sm"><b>Email: </b>@Html.DisplayFor(modelItem => item.Email)
+                                <ul class="ml-4 mb-0 fa-ul text-muted">
+                                    <li class="small">
+                                        <span class="fa-li"><i class="fas fa-lg fa-building"></i></span>
+                                        <strong>Address:</strong>&nbsp; @Html.DisplayFor(modelItem => item.Address), @Html.DisplayFor(modelItem => item.Country)
+                                    </li>
+                                    <br />
+                                    <li class="small">
+                                        <span class="fa-li"><i class="fas fa-lg fa-phone"></i></span>
+                                        <strong>Phone:</strong>&nbsp; @Html.DisplayFor(modelItem => item.PhoneNumber)
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-5 text-center">
+                                <img src="~/path/to/default-avatar.jpg" alt="user-avatar" class="img-circle img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="text-right">
+                            <a asp-action="Details" class="btn btn-sm btn-primary" title="View User Details"><i class="fas fa-user"></i> View Details</a>
+                            <a asp-action="Edit" class="btn btn-sm btn-warning" title="Edit User Details" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <a asp-action="Delete" class="btn btn-sm btn-danger" title="Delete User" asp-route-id="@item.Id"><i class="fa-solid fa-trash"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
+
