--- a/iTEMS/Views/Employees/Edit.cshtml
+++ b/iTEMS/Views/Employees/Edit.cshtml
@@ -1,11 +1,13 @@
 ﻿@model iTEMS.Models.Employee
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Team Member Details";
 }
 
-<h1>Edit</h1>
-
-<h4>Employee</h4>
+<br />
+<br />
+<br />
+<br />
+<h2 style="font-family:Tahoma">Edit Team Member Details</h2>
 <hr />
 <div class="row">
         <form asp-action="Edit" class="col-md-12">
