--- a/iTEMS/Views/Shared/_Layout.cshtml
+++ b/iTEMS/Views/Shared/_Layout.cshtml
@@ -193,11 +193,14 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <br />
+    <footer class="border-top footer text-muted" style="position: fixed; bottom: 0; width: 100%;">
         <div class="container">
             &copy; 2024 - iTEMS - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
+
     <!-- REQUIRED SCRIPTS -->
     <!-- jQuery -->
     <script src="~/AdminLTE/plugins/jquery/jquery.min.js"></script>
