--- a/iTEMS/Views/Employees/Create.cshtml
+++ b/iTEMS/Views/Employees/Create.cshtml
@@ -2,14 +2,14 @@
 
 
 @{
-    ViewData["Title"] = "Create New Employee";
+    ViewData["Title"] = "Add New Team Member";
 }
 
 <br />
 <br />
 <br />
 <br />
-<h4>Create New Employee</h4>
+<h2 style="font-family:Tahoma">Add New Team Member</h2>
 <hr />
 <div class="row">
     <form asp-action="Create" class="col-md-12">
@@ -97,7 +97,7 @@
         </div>
         <div class="form-group">
             <a class="btn btn-outline-info" asp-action="Index" title="Back to List" onmouseover="this.style.backgroundColor='#007bff';" onmouseout="this.style.backgroundColor='';"><i class="fa-solid fa-arrow-left-long"></i></a>
-            <input type="submit" value="Create New Employee" class="btn btn-primary" onmouseover="this.style.backgroundColor='#024a73';" onmouseout="this.style.backgroundColor='';" />
+            <input type="submit" value="Create New Team Member" class="btn btn-primary" onmouseover="this.style.backgroundColor='#024a73';" onmouseout="this.style.backgroundColor='';" />
         </div>
     </form>
 </div>
