--- a/iTEMS/Views/Employees/Delete.cshtml
+++ b/iTEMS/Views/Employees/Delete.cshtml
@@ -1,13 +1,16 @@
 ﻿@model iTEMS.Models.Employee
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Team Member";
 }
 
+<br />
+<br />
+<br />
+<br />
 
-<h3>Are you sure you want to delete this?</h3>
+<h2 style="font-family:Tahoma">Are you sure you want to delete this Team Member?</h2>
 <div>
-    <h4>Employee</h4>
     <hr />
     <table class="table table-bordered">
         <tbody>
