--- a/iTEMS/Views/Employees/Details.cshtml
+++ b/iTEMS/Views/Employees/Details.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h4>Employee Details</h4>
+        <h2 style="font-family:Tahoma">Team Member Details</h2>
         <hr />
         <table class="table table-bordered">
             <tbody>
