--- a/iTEMS/Views/Employees/Delete.cshtml
+++ b/iTEMS/Views/Employees/Delete.cshtml
@@ -9,73 +9,58 @@
 <br />
 <br />
 
-<h2 style="font-family:Tahoma">Are you sure you want to delete this Team Member?</h2>
-<div>
-    <hr />
-    <table class="table table-bordered">
-        <tbody>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.EmpNo)</th>
-                <td>@Html.DisplayFor(model => model.EmpNo)</td>
-            </tr>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.FirstName)</th>
-                <td>@Html.DisplayFor(model => model.FirstName)</td>
-            </tr>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.LastName)</th>
-                <td>@Html.DisplayFor(model => model.LastName)</td>
-            </tr>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.PhoneNumber)</th>
-                <td>@Html.DisplayFor(model => model.PhoneNumber)</td>
-            </tr>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.Email)</th>
-                <td>@Html.DisplayFor(model => model.Email)</td>
-            </tr>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.Country)</th>
-                <td>@Html.DisplayFor(model => model.Country)</td>
-            </tr>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.DateofBirth)</th>
-                <td>@Html.DisplayFor(model => model.DateofBirth)</td>
-            </tr>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.Address)</th>
-                <td>@Html.DisplayFor(model => model.Address)</td>
-            </tr>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.Department)</th>
-                <td>@Html.DisplayFor(model => model.Department)</td>
-            </tr>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.Designation)</th>
-                <td>@Html.DisplayFor(model => model.Designation)</td>
-            </tr>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.CreatedBy)</th>
-                <td>@Html.DisplayFor(model => model.CreatedBy)</td>
-            </tr>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.CreatedOn)</th>
-                <td>@Html.DisplayFor(model => model.CreatedOn)</td>
-            </tr>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.ModifiedBy)</th>
-                <td>@Html.DisplayFor(model => model.ModifiedBy)</td>
-            </tr>
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.ModifiedOn)</th>
-                <td>@Html.DisplayFor(model => model.ModifiedOn)</td>
-            </tr>
-        </tbody>
-    </table>
+<h4 style="font-family:Tahoma">Are you sure you want to delete this Team Member?</h4>
+<form asp-action="Delete">
+    <input type="hidden" asp-for="Id" />
+    <a class="btn btn-outline-info" asp-action="Index" title="Back to List" onmouseover="this.style.backgroundColor='#007bff';" onmouseout="this.style.backgroundColor='';"><i class="fa-solid fa-arrow-left-long"></i></a>
+    <input type="submit" value="Delete" class="btn btn-danger" title="Delete Team Member" />
+</form>
+<hr />
+<div class="col-md-12 mx-auto">
+    <div class="card card-primary card-outline">
+        <div class="card-body box-profile">
+            <div class="text-center">
+                <img class="profile-user-img img-fluid img-circle" src="~/assets/profile_pic.png" alt="User profile picture">
+            </div>
+            <h3 class="profile-username text-center">@Html.DisplayFor(model => model.FullName)</h3>
+            <p class="text-muted text-center">@Html.DisplayFor(model => model.Designation)</p>
 
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <a class="btn btn-outline-info" asp-action="Index" title="Back to List" onmouseover="this.style.backgroundColor='#007bff';" onmouseout="this.style.backgroundColor='';"><i class="fa-solid fa-arrow-left-long"></i></a>
-        <input type="submit" value="Delete" class="btn btn-danger" title="Delete"/>
-    </form>
+
+        </div>
+    </div>
+
+    <div class="card card-primary">
+        <div class="card-header">
+            <h3 class="card-title">About Me</h3>
+        </div>
+        <div class="card-body">
+            <strong><i class="fas fa-book mr-1"></i>&nbsp;&nbsp;&nbsp;&nbsp;Employee Number</strong>
+            <p class="text-muted">@Html.DisplayFor(model => model.EmpNo)</p>
+            <hr>
+            <strong><i class="fas fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Phone Number</strong>
+            <p class="text-muted">@Html.DisplayFor(model => model.PhoneNumber)</p>
+            <hr>
+            <strong><i class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email</strong>
+            <p class="text-muted">@Html.DisplayFor(model => model.Email)</p>
+            <hr>
+            <strong><i class="fas fa-location-dot"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Location</strong>
+            <p class="text-muted">
+                @Html.DisplayFor(model => model.Address) ,
+                @Html.DisplayFor(model => model.Country)
+            </p>
+            <hr>
+            <strong><i class="fas fa-cake-candles"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Date of Birth</strong>
+            <p class="text-muted">
+                @Html.DisplayFor(model => model.DateofBirth)
+            </p>
+            <hr>
+            <strong><i class="fas fa-building-user"></i>&nbsp;&nbsp;&nbsp;&nbsp;Department</strong>
+            <p class="text-muted">
+                @Html.DisplayFor(model => model.Department)
+            </p>
+        </div>
+    </div>
 </div>
+
+
+
