--- a/iTEMS/Views/Employees/Details.cshtml
+++ b/iTEMS/Views/Employees/Details.cshtml
@@ -2,78 +2,115 @@
 @{
     ViewData["Title"] = "Details";
 }
-<br />
-<br />
-<br />
 
-<div class="row">
-    <div class="col-md-12">
-        <h2 style="font-family:Tahoma">Team Member Details</h2>
-        <hr />
-        <table class="table table-bordered">
-            <tbody>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.EmpNo)</th>
-                    <td>@Html.DisplayFor(model => model.EmpNo)</td>
-                </tr>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.FirstName)</th>
-                    <td>@Html.DisplayFor(model => model.FirstName)</td>
-                </tr>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.LastName)</th>
-                    <td>@Html.DisplayFor(model => model.LastName)</td>
-                </tr>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.PhoneNumber)</th>
-                    <td>@Html.DisplayFor(model => model.PhoneNumber)</td>
-                </tr>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.Email)</th>
-                    <td>@Html.DisplayFor(model => model.Email)</td>
-                </tr>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.Country)</th>
-                    <td>@Html.DisplayFor(model => model.Country)</td>
-                </tr>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.DateofBirth)</th>
-                    <td>@Html.DisplayFor(model => model.DateofBirth)</td>
-                </tr>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.Address)</th>
-                    <td>@Html.DisplayFor(model => model.Address)</td>
-                </tr>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.Department)</th>
-                    <td>@Html.DisplayFor(model => model.Department)</td>
-                </tr>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.Designation)</th>
-                    <td>@Html.DisplayFor(model => model.Designation)</td>
-                </tr>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.CreatedBy)</th>
-                    <td>@Html.DisplayFor(model => model.CreatedBy)</td>
-                </tr>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.CreatedOn)</th>
-                    <td>@Html.DisplayFor(model => model.CreatedOn)</td>
-                </tr>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.ModifiedBy)</th>
-                    <td>@Html.DisplayFor(model => model.ModifiedBy)</td>
-                </tr>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.ModifiedOn)</th>
-                    <td>@Html.DisplayFor(model => model.ModifiedOn)</td>
-                </tr>
-            </tbody>
-        </table>
+<div class="container" style="display:none">
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="text-center">Team Member Details</h2>
+                </div>
+                <div class="card-body">
+                    <dl class="row">
+                        <dt class="col-sm-4">Employee Number:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.EmpNo)</dd>
+
+                        <dt class="col-sm-4">First Name:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.FirstName)</dd>
+
+                        <dt class="col-sm-4">Last Name:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.LastName)</dd>
+
+                        <dt class="col-sm-4">Phone Number:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.PhoneNumber)</dd>
+
+                        <dt class="col-sm-4">Email:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.Email)</dd>
+
+                        <dt class="col-sm-4">Country:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.Country)</dd>
+
+                        <dt class="col-sm-4">Date of Birth:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.DateofBirth)</dd>
+
+                        <dt class="col-sm-4">Address:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.Address)</dd>
+
+                        <dt class="col-sm-4">Department:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.Department)</dd>
+
+                        <dt class="col-sm-4">Designation:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.Designation)</dd>
+
+                        <dt class="col-sm-4">Created By:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.CreatedBy)</dd>
+
+                        <dt class="col-sm-4">Created On:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.CreatedOn)</dd>
+
+                        <dt class="col-sm-4">Modified By:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.ModifiedBy)</dd>
+
+                        <dt class="col-sm-4">Modified On:</dt>
+                        <dd class="col-sm-8">@Html.DisplayFor(model => model.ModifiedOn)</dd>
+                    </dl>
+                </div>
+            </div>
+            <div class="text-center mt-3">
+                <a class="btn btn-outline-info" asp-action="Index" title="Back to List">Back to List</a>
+                <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
+            </div>
+        </div>
     </div>
 </div>
 
-<div>
+<br />
+<br />
+<br />
+<div class="col-md-12 mx-auto">
+    <div class="card card-primary card-outline">
+        <div class="card-body box-profile">
+            <div class="text-center">
+                <img class="profile-user-img img-fluid img-circle" src="~/assets/profile_pic.png" alt="User profile picture">
+            </div>
+            <h3 class="profile-username text-center">@Html.DisplayFor(model => model.FullName)</h3>
+            <p class="text-muted text-center">@Html.DisplayFor(model => model.Designation)</p>
+
+
+        </div>
+    </div>
+
+    <div class="card card-primary">
+        <div class="card-header">
+            <h3 class="card-title">About Me</h3>
+        </div>
+        <div class="card-body">
+            <strong><i class="fas fa-book mr-1"></i>&nbsp;&nbsp;&nbsp;&nbsp;Employee Number</strong>
+            <p class="text-muted">@Html.DisplayFor(model => model.EmpNo)</p>
+            <hr>
+            <strong><i class="fas fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Phone Number</strong>
+            <p class="text-muted">@Html.DisplayFor(model => model.PhoneNumber)</p>
+            <hr>
+            <strong><i class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email</strong>
+            <p class="text-muted">@Html.DisplayFor(model => model.Email)</p>
+            <hr>
+            <strong><i class="fas fa-location-dot"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Location</strong>
+            <p class="text-muted">
+                @Html.DisplayFor(model => model.Address) ,
+                @Html.DisplayFor(model => model.Country)
+            </p>
+            <hr>
+            <strong><i class="fas fa-cake-candles"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Date of Birth</strong>
+            <p class="text-muted">
+                @Html.DisplayFor(model => model.DateofBirth)
+            </p>
+            <hr>
+            <strong><i class="fas fa-building-user"></i>&nbsp;&nbsp;&nbsp;&nbsp;Department</strong>
+            <p class="text-muted">
+                @Html.DisplayFor(model => model.Department)
+            </p>
+        </div>
+    </div>
     <a class="btn btn-outline-info" asp-action="Index" title="Back to List" onmouseover="this.style.backgroundColor='#007bff';" onmouseout="this.style.backgroundColor='';"><i class="fa-solid fa-arrow-left-long"></i></a>
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary" onmouseover="this.style.backgroundColor='#024a73';" onmouseout="this.style.backgroundColor='';">Edit</a>
 </div>
+
