--- a/iTEMS/Views/Employees/Index.cshtml
+++ b/iTEMS/Views/Employees/Index.cshtml
@@ -132,7 +132,7 @@
                                 <h2 class="lead"><b>@Html.DisplayFor(modelItem => item.FullName)</b></h2>
                             </div>
                             <div class="col-5 text-center">                               
-                                <img src="~/assets/images.png" alt="user-avatar" class="img-circle img-fluid img-lg float-middle">
+                                <img src="~/assets/profile_pic.png" alt="user-avatar" class="img-circle img-fluid img-lg float-middle">
                             </div>
                         </div>
                         <div class="row mt-3">
