--- a/iTEMS/Views/Projects/Create.cshtml
+++ b/iTEMS/Views/Projects/Create.cshtml
@@ -9,7 +9,7 @@
 <h4>Project</h4>
 <hr />
 <div class="row">
-    <form asp-action="Create" class="col-md-12">
+    <form asp-action="Create" asp-controller="Projects" class="col-md-12 method="post" enctype="multipart/form-data">
         <!-- Form wrapping both columns -->
         <div class="row">
             <div class="col-md-6">
@@ -60,6 +60,12 @@
                     <label asp-for="Blocker" class="control-label">Blocker</label>
                     <input asp-for="Blocker" class="form-control" />
                     <span asp-validation-for="Blocker" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Attachments" class="control-label">Attachments</label>
+                    <input asp-for="Attachments" type="file" name="files" multiple class="form-control-file" />
+                    @*<input type="file" name="files" multiple class="form-control-file" /> *@
+                    <span asp-validation-for="Attachments" class="text-danger"></span>
                 </div>
                 <div class="form-group col-md-12">
                     <!-- Full width submit button -->
