--- a/iTEMS/Views/Projects/Index.cshtml
+++ b/iTEMS/Views/Projects/Index.cshtml
@@ -155,6 +155,20 @@
                             {
                                 <span class="badge badge-warning">@Html.DisplayFor(modelItem => item.Status)</span>
                             }
+                            <td>
+                                @if (item.Attachments != null && item.Attachments.Any())
+                                {
+                                    foreach (var filePath in item.Attachments)
+                                    {
+                                        <a href="@Url.Action("DownloadFile", "Projects", new { id = item.Id })" download="@System.IO.Path.GetFileName(filePath)">@System.IO.Path.GetFileName(filePath)</a>
+                                        <br />
+                                    }
+                                }
+                                else
+                                {
+                                    <span>No files uploaded</span>
+                                }
+                            </td>
                         </p>                        
                     </div>
                     <div class="card-footer d-flex justify-content-end">
